; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_test_helpers.c_run_h_tc_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_test_helpers.c_run_h_tc_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.run_h_tc_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @run_h_tc_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_h_tc_child(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.run_h_tc_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.run_h_tc_data*
  store %struct.run_h_tc_data* %5, %struct.run_h_tc_data** %3, align 8
  %6 = load %struct.run_h_tc_data*, %struct.run_h_tc_data** %3, align 8
  %7 = getelementptr inbounds %struct.run_h_tc_data, %struct.run_h_tc_data* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.run_h_tc_data*, %struct.run_h_tc_data** %3, align 8
  %10 = getelementptr inbounds %struct.run_h_tc_data, %struct.run_h_tc_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @atf_tc_run(i32 %8, i32 %11)
  %13 = call i32 @RE(i32 %12)
  ret void
}

declare dso_local i32 @RE(i32) #1

declare dso_local i32 @atf_tc_run(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
